@@ -1,26 +1,45 @@
 package pl.bajty.teryt.internal;
 
+import jakarta.xml.bind.JAXBElement;
 import lombok.RequiredArgsConstructor;
 import org.springframework.ws.client.core.WebServiceTemplate;
 import org.springframework.ws.soap.addressing.client.ActionCallback;
-import pl.bajty.teryt.internal.soap.generated.PobierzListeWojewodztw;
-import pl.bajty.teryt.internal.soap.generated.PobierzListeWojewodztwResponse;
+import pl.bajty.teryt.internal.soap.generated.*;
 import pl.bajty.teryt.model.*;
 
 import java.net.URI;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 @RequiredArgsConstructor
 public class TercService {
 
     private final WebServiceTemplate webServiceTemplate;
+    private final ObjectFactory objectFactory = new ObjectFactory();
 
-    List<StanTerc> getStanTerc(LocalDate stanNa) {
-        return List.of();
+    public PlikKatalogu getStanTerc(LocalDate stanNa) {
+        var request = new PobierzKatalogTERC();
+        request.setDataStanu(TerytMapper.toXmlGregorianCalendar(stanNa));
+
+        var response = (PobierzKatalogTERCResponse) webServiceTemplate.marshalSendAndReceive(
+                request,
+                new ActionCallback(URI.create("http://tempuri.org/ITerytWs1/PobierzKatalogTERC"))
+        );
+
+        return Optional.ofNullable(response)
+                .map(PobierzKatalogTERCResponse::getPobierzKatalogTERCResult)
+                .map(JAXBElement::getValue)
+                .map(plik -> new PlikKatalogu(
+                        TerytMapper.unwrap(plik.getNazwaPliku()),
+                        TerytMapper.unwrap(plik.getPlikZawartosc()),
+                        TerytMapper.unwrap(plik.getOpis())
+                ))
+                .orElse(null);
     }
 
-    List<Wojewodztwo> getWojewodztwa(LocalDate date) {
+    public List<Wojewodztwo> getWojewodztwa(LocalDate date) {
         var request = new PobierzListeWojewodztw();
         request.setDataStanu(TerytMapper.toXmlGregorianCalendar(date));
 
@@ -29,86 +48,168 @@ public class TercService {
                 new ActionCallback(URI.create("http://tempuri.org/ITerytWs1/PobierzListeWojewodztw"))
         );
 
-        if (response == null || response.getPobierzListeWojewodztwResult() == null || response.getPobierzListeWojewodztwResult().isNil()) {
-            return List.of();
-        }
-
-        var resultValue = response.getPobierzListeWojewodztwResult().getValue();
-
-        if (resultValue == null || resultValue.getJednostkaTerytorialna() == null) {
-            return List.of();
-        }
-
-        return resultValue.getJednostkaTerytorialna().stream()
+        return Optional.ofNullable(response)
+                .map(PobierzListeWojewodztwResponse::getPobierzListeWojewodztwResult)
+                .map(JAXBElement::getValue)
+                .map(ArrayOfJednostkaTerytorialna::getJednostkaTerytorialna)
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(TerytMapper::toWojewodztwo)
                 .toList();
     }
 
-    List<Wojewodztwo> getWojewodztwa(Region region, LocalDate stanNa) {
-        return List.of();
+    public List<Wojewodztwo> getWojewodztwa(Region region, LocalDate stanNa) {
+        var request = new PobierzListeWojewodztwWRegionie();
+        request.setReg(objectFactory.createPobierzListeWojewodztwWRegionieReg(region.id()));
+        request.setDataStanu(TerytMapper.toXmlGregorianCalendar(stanNa));
+
+        var response = (PobierzListeWojewodztwWRegionieResponse) webServiceTemplate.marshalSendAndReceive(
+                request,
+                new ActionCallback(URI.create("http://tempuri.org/ITerytWs1/PobierzListeWojewodztwWRegionie"))
+        );
+
+        return Optional.ofNullable(response)
+                .map(PobierzListeWojewodztwWRegionieResponse::getPobierzListeWojewodztwWRegionieResult)
+                .map(JAXBElement::getValue)
+                .map(ArrayOfJednostkaNomenklaturyNTS::getJednostkaNomenklaturyNTS)
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(nts -> new Wojewodztwo(
+                        new Terc(TerytMapper.unwrap(nts.getWOJ())),
+                        TerytMapper.unwrap(nts.getNAZWA()),
+                        TerytMapper.parseDate(TerytMapper.unwrap(nts.getSTANNA()))
+                ))
+                .toList();
     }
 
-    List<Powiat> getPowiaty() {
-        return List.of();
+    public List<Powiat> getPowiaty(LocalDate stanNa) {
+        return getPowiatyInternal(null, stanNa);
     }
 
-    List<Powiat> getPowiaty(LocalDate stanNa) {
-        return List.of();
+    public List<Powiat> getPowiaty() {
+        return getPowiaty(LocalDate.now());
     }
 
-    List<Powiat> getPowiaty(Wojewodztwo wojewodztwo, LocalDate stanNa) {
-        return List.of();
+    public List<Powiat> getPowiaty(Wojewodztwo wojewodztwo, LocalDate stanNa) {
+        return getPowiatyInternal(wojewodztwo.id().value(), stanNa);
     }
 
-    List<Powiat> getPowiaty(Terc wojewodztwoId, LocalDate stanNa) {
-        return List.of();
+    public List<Powiat> getPowiaty(Terc wojewodztwoId, LocalDate stanNa) {
+        return getPowiatyInternal(wojewodztwoId.value(), stanNa);
     }
 
-    List<Powiat> getPowiaty(Podregion podregion, LocalDate stanNa) {
-        return List.of();
+    private List<Powiat> getPowiatyInternal(String wojId, LocalDate stanNa) {
+        var request = new PobierzListePowiatow();
+        request.setWoj(objectFactory.createPobierzListePowiatowWoj(wojId));
+        request.setDataStanu(TerytMapper.toXmlGregorianCalendar(stanNa));
+
+        var response = (PobierzListePowiatowResponse) webServiceTemplate.marshalSendAndReceive(
+                request,
+                new ActionCallback(URI.create("http://tempuri.org/ITerytWs1/PobierzListePowiatow"))
+        );
+
+        return Optional.ofNullable(response)
+                .map(PobierzListePowiatowResponse::getPobierzListePowiatowResult)
+                .map(JAXBElement::getValue)
+                .map(ArrayOfJednostkaTerytorialna::getJednostkaTerytorialna)
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(TerytMapper::toPowiat)
+                .toList();
     }
 
-    List<Powiat> getPowiaty(String podregionId, LocalDate stanNa) {
-        return List.of();
+    public List<Powiat> getPowiaty(Podregion podregion, LocalDate stanNa) {
+        return getPowiaty(podregion.id(), stanNa);
     }
 
-    List<Gmina> getGminy() {
-        return List.of();
+    public List<Powiat> getPowiaty(String podregionId, LocalDate stanNa) {
+        var request = new PobierzListePowiatowWPodregionie();
+        request.setPodreg(objectFactory.createPobierzListePowiatowWPodregioniePodreg(podregionId));
+        request.setDataStanu(TerytMapper.toXmlGregorianCalendar(stanNa));
+
+        var response = (PobierzListePowiatowWPodregionieResponse) webServiceTemplate.marshalSendAndReceive(
+                request,
+                new ActionCallback(URI.create("http://tempuri.org/ITerytWs1/PobierzListePowiatowWPodregionie"))
+        );
+
+        return Optional.ofNullable(response)
+                .map(PobierzListePowiatowWPodregionieResponse::getPobierzListePowiatowWPodregionieResult)
+                .map(JAXBElement::getValue)
+                .map(ArrayOfJednostkaNomenklaturyNTS::getJednostkaNomenklaturyNTS)
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(nts -> new Powiat(
+                        new Terc(TerytMapper.unwrap(nts.getWOJ()) + TerytMapper.unwrap(nts.getPOW())),
+                        TerytMapper.unwrap(nts.getNAZWA()),
+                        RodzajPowiatu.fromValue(TerytMapper.unwrap(nts.getRODZ())),
+                        new Wojewodztwo(new Terc(TerytMapper.unwrap(nts.getWOJ())), null, null),
+                        TerytMapper.parseDate(TerytMapper.unwrap(nts.getSTANNA()))
+                ))
+                .toList();
     }
 
-    List<Gmina> getGminy(LocalDate stanNa) {
-        return List.of();
+    public List<Gmina> getGminy() {
+        return getGminy(LocalDate.now());
     }
 
-    List<Gmina> getGminy(Wojewodztwo wojewodztwo, LocalDate stanNa) {
-        return List.of();
+    public List<Gmina> getGminy(LocalDate stanNa) {
+        return getGminyInternal(null, null, stanNa);
     }
 
-    List<Gmina> getGminy(Wojewodztwo wojewodztwo) {
-        return List.of();
+    public List<Gmina> getGminy(Wojewodztwo wojewodztwo, LocalDate stanNa) {
+        return getGminyInternal(wojewodztwo.id().value(), null, stanNa);
     }
 
-    List<Gmina> getGminy(Terc wojewodztwoId, LocalDate stanNa) {
-        return List.of();
+    public List<Gmina> getGminy(Wojewodztwo wojewodztwo) {
+        return getGminy(wojewodztwo, LocalDate.now());
     }
 
-    List<Gmina> getGminy(Terc wojewodztwoId) {
-        return List.of();
+    public List<Gmina> getGminy(Terc wojewodztwoId, LocalDate stanNa) {
+        return getGminyInternal(wojewodztwoId.value(), null, stanNa);
     }
 
-    List<Gmina> getGminy(Powiat powiat, LocalDate stanNa) {
-        return List.of();
+    public List<Gmina> getGminy(Terc wojewodztwoId) {
+        return getGminy(wojewodztwoId, LocalDate.now());
     }
 
-    List<Gmina> getGminy(Powiat powiat) {
-        return List.of();
+    public List<Gmina> getGminy(Powiat powiat, LocalDate stanNa) {
+        return getGminyInternal(powiat.wojewodztwo().id().value(), powiat.id().value().substring(2), stanNa);
     }
 
-    List<Gmina> getGminy(Terc powiatId, Terc wojewodztwoId, LocalDate stanNa) {
-        return List.of();
+    public List<Gmina> getGminy(Powiat powiat) {
+        return getGminy(powiat, LocalDate.now());
     }
 
-    List<Gmina> getGminy(Terc powiatId, Terc wojewodztwoId) {
-        return List.of();
+    public List<Gmina> getGminy(Terc wojewodztwoId, Terc powiatId, LocalDate stanNa) {
+        return getGminyInternal(
+                wojewodztwoId != null ? wojewodztwoId.value() : null,
+                powiatId != null ? powiatId.value().substring(2) : null,
+                stanNa
+        );
+    }
+
+    private List<Gmina> getGminyInternal(String wojId, String powId, LocalDate stanNa) {
+        var request = new PobierzListeGmin();
+        request.setWoj(objectFactory.createPobierzListeGminWoj(wojId));
+        request.setPow(objectFactory.createPobierzListeGminPow(powId));
+        request.setDataStanu(TerytMapper.toXmlGregorianCalendar(stanNa));
+
+        var response = (PobierzListeGminResponse) webServiceTemplate.marshalSendAndReceive(
+                request,
+                new ActionCallback(URI.create("http://tempuri.org/ITerytWs1/PobierzListeGmin"))
+        );
+
+        return Optional.ofNullable(response)
+                .map(PobierzListeGminResponse::getPobierzListeGminResult)
+                .map(JAXBElement::getValue)
+                .map(ArrayOfJednostkaTerytorialna::getJednostkaTerytorialna)
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(TerytMapper::toGmina)
+                .toList();
+    }
+
+    public List<Gmina> getGminy(Terc powiatId, Terc wojewodztwoId) {
+        return getGminy(wojewodztwoId, powiatId, LocalDate.now());
     }
 }
